<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">


    <TextView
            android:id="@+id/createReportTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/agent_report"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createReportTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <TextView
                    android:id="@+id/reportName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Firstname surname" />

            <TextView
                    android:id="@+id/reportPeriod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reportName"
                    tools:text="12.43.44-32.11.22" />

            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/report_currency"
                    android:textAllCaps="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reportPeriod" />

            <TextView
                    android:id="@+id/reportCurrency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:textAllCaps="true"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    tools:text="eur" />

            <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                <ImageView

                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layerType="software"
                        android:src="@drawable/dotted"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/confirmation_ticket_price_title" />

                <com.betkey.TicketRow
                        android:id="@+id/reportBalance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/report_balance" />

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layerType="software"
                        android:src="@drawable/dotted"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/confirmation_ticket_price_title" />

                <com.betkey.TicketRow
                        android:id="@+id/reportTotalTickets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/report_t_tickets" />

                <com.betkey.TicketRow
                        android:id="@+id/reportTotalAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/report_t_amount" />

                <com.betkey.TicketRow
                        android:id="@+id/reportPayoutTickets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/report_payout_t" />

                <com.betkey.TicketRow
                        android:id="@+id/reportPayoutAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/report_p_amount" />

                <com.betkey.TicketRow
                        android:id="@+id/reportCalnceledTickets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/report_c_tickets" />

                <com.betkey.TicketRow
                        android:id="@+id/reportCalnceledAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/report_c_amount" />

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layerType="software"
                        android:src="@drawable/dotted"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/confirmation_ticket_price_title" />

                <com.betkey.TicketRow
                        android:id="@+id/reportJackpotTickets"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/report_j_tickets" />

                <com.betkey.TicketRow
                        android:id="@+id/reportJackpotAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/report_j_amount" />

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layerType="software"
                        android:src="@drawable/dotted"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/confirmation_ticket_price_title" />

                <com.betkey.TicketRow
                        android:id="@+id/reportDeposits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/report_deposits" />

                <com.betkey.TicketRow
                        android:id="@+id/reportDepositAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/report_d_amount" />

                <com.betkey.TicketRow
                        android:id="@+id/reportWithdrawals"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/report_withdrawals" />

                <com.betkey.TicketRow
                        android:id="@+id/reportWithdrawalAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:name="@string/report_w_amount" />
            </LinearLayout>

            <Button
                    android:id="@+id/reportPrintButton"
                    style="@style/ButtonYellowTheme"
                    android:layout_width="@dimen/big_btn_width"
                    android:layout_height="@dimen/big_btn_height"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="center"
                    android:text="@string/report_print"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/report_back_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linearLayout"
                    app:layout_constraintVertical_bias="0.83"
                    app:layout_constraintVertical_chainStyle="packed" />

            <Button
                    android:id="@+id/report_back_btn"
                    style="@style/ButtonRedTheme"
                    android:layout_width="@dimen/small_btn_width"
                    android:layout_height="@dimen/small_btn_height"
                    android:gravity="center"
                    android:text="@string/back_btn"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/reportPrintButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>