<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/betslip_detail_head_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sportbetting_betslip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/betslip_detail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textAllCaps="true"
            android:layout_marginTop="8dp"
            android:text="@string/sportbetting_stake"
            app:layout_constraintTop_toBottomOf="@+id/betslip_detail_head_text"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>


    <Button
            android:id="@+id/betslip_detail_back_btn"
            style="@style/ButtonRedTheme"
            android:layout_width="@dimen/small_btn_width"
            android:layout_height="@dimen/big_btn_height"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/back_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>